--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,68 @@
   font-size: 13px;
   font-weight: normal;  
 }
+
+.container {
+  display: grid;
+  grid-template-rows: min(1fr, fit-content) 1fr 5fr 1fr;
+  grid-template-columns: 1fr 4fr;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  display: grid;
+  height: fit-content;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+}
+
+.header ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+}
+
+.sidebar{
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
+  display: grid;
+  gap: 50px;
+  justify-content: center;
+}
+
+.sidebar div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+.nav ul {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.article {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+}
+
+.footer {
+  grid-row: 4 / 5;
+  grid-column: 1 / 3;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
